@startuml
'https://plantuml.com/class-diagram

class Podcast
class Episode
class Transcript
class TextChunk
class User

Podcast --o Episode
Episode --* Transcript
Transcript --* TextChunk
User --o Podcast
Episode --o Section


class Podcast {
 - String name
 - Image logo
 - String description
 - ArrayList<String> genres
 - String author
 - ArrayList<Episode> episodes
}

class Section {
    - String title
    - ArrayList<TextChunk> textChunks
}

class Episode {
 - String title
 - Image coverImage
 - int length
 - File audio
 - Transcript transcript
 - ArrayList<Section> sections
 - String summary
 - Transcript generateTranscript()
 - void playAudio()
 - String generateSummary()
}


class Transcript {
 - Episode episode
 - String rawText
 - ArrayList<TextChunk> textChunks
 - HashMap generateTopics()
}

class TextChunk {
 - int start
 - int end
 - String text
}

class User {
 - String username
 - String password
 - ArrayList<Podcast> podcasts
}

@enduml